<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="OpalaFragment">


    <ImageView
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:src="@drawable/opala"
        android:layout_gravity="center"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opala"
        android:textColor="@color/letras"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal|center_vertical"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anoOpala"
        android:textSize="20dp"
        android:paddingTop="10dp"
        android:textColor="@color/letras"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal|center_vertical"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/descriOpala"
        android:textSize="20dp"
        android:textColor="@color/letras"
        android:textStyle="bold"
        android:textAlignment="center"></TextView>
</LinearLayout>