<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="FuscaFragment">


    <ImageView
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:src="@drawable/fusca"
        android:layout_gravity="center"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fusca"
        android:textColor="@color/letras"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal|center_vertical"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ano_de_lan_amento_1947"
        android:textSize="20dp"
        android:textColor="@color/letras"
        android:paddingTop="10dp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal|center_vertical"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/descriÇãoFusca"
        android:textColor="@color/letras"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textAlignment="center"></TextView>
</LinearLayout>
